--- a/O_Salsicha/platformio.ini
+++ b/O_Salsicha/platformio.ini
@@ -13,4 +13,11 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 upload_port = COM5
-lib_deps = adafruit/Adafruit_VL53L0X@^1.2.4
+lib_deps = 
+	adafruit/Adafruit_VL53L0X@^1.2.4
+	adafruit/Adafruit GFX Library@^1.11.9
+	adafruit/Adafruit SSD1306@^2.5.9
+	adafruit/Adafruit BusIO@^1.16.0
+	SPI
+	me-no-dev/AsyncTCP@^1.1.1
+	zeed/ESP Async WebServer@^1.2.3
