--- a/O_Salsicha/platformio.ini
+++ b/O_Salsicha/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 upload_port = COM5
+monitor_speed = 19200
 lib_deps = 
 	adafruit/Adafruit_VL53L0X@^1.2.4
 	adafruit/Adafruit GFX Library@^1.11.9
